# forti4d

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alcanzabilidad.py  analisis_bloques_v8.py  analisis_cruzado.py  analisis_estructura.py  common_blocks.py  complejidad.py  config.py  consolidar.py  dependencias.py  grafo_visual.py  inventario.py  patterns_v2.py  perfilador.py  pipeline.py  priorizacion.py  pyproject.toml  resumen_ejecutivo.py  simbolos.py  sloc.py
doc/: arquitectura.md  interpretacion.md
doc/scripts/: alcanzabilidad.md  analisis_bloques_v8.md  analisis_cruzado.md  analisis_estructura.md  common_blocks.md  complejidad.md  consolidar.md  dependencias.md  equivalencias.md  grafo_visual.md  inventario.md  perfilador.md  pipeline.md  priorizacion.md  reader_logical.md  resumen_ejecutivo.md  simbolos.md  sloc.md  tipos_derivados.md
forti4d/: __init__.py  analisis_estructura.py  clones.py  config.py  consolidar.py  dependencias.py  equivalencias.py  grafo_visual.py  inventario.py  perfilador.py  pipeline.py  priorizacion.py  reader_logical.py  reporte_html.py  resumen_ejecutivo.py  simbolos.py  sloc.py  tipos_derivados.py
forti4d/analyzers/: __init__.py  alcanzabilidad.py  analisis_bloques_v8.py  analisis_cruzado.py  analisis_estructura.py  block_analysis.py  clones.py  common_blocks.py  complejidad.py  complexity.py  consolidar.py  consolidate.py  cross_analysis.py  dependencias.py  dependencies.py  derived_types.py  equivalences.py  equivalencias.py  executive_summary.py  (+17 more)
tests/: conftest.py  test_alcanzabilidad.py  test_clones.py  test_complejidad.py  test_complexity.py  test_dependencias.py  test_dependencies.py  test_inventario.py  test_inventory.py  test_reachability.py  test_simbolos.py  test_symbols.py
(+51 files in other folders)
