[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forti4d"
version = "0.7.0"
description = "Fortran static analysis toolkit — MI4D model (4-axis risk & structure inspection)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["fortran", "static-analysis", "legacy-code", "migration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
forti4d = "forti4d.pipeline:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["forti4d*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
